--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -1,5 +1,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res/com.rohitbhoompally.elements.circularcdt"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
@@ -8,9 +9,16 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.rohitbhoompally.elements.circularcdt.MainActivity$PlaceholderFragment" >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    <com.rohitbhoompally.elements.circularcdt.CircularTimer
+        android:id="@+id/c_timer"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        app:rimDefaultColor="#AEF7F7F7"
+        app:rimFillColor="#AFBFFF00"
+        app:rimInnerShadow="true"
+        app:rimThickness="5dp"
+        app:showHours="true"
+        app:showMinutes="true" />
 
 </RelativeLayout>
