Fetching values from resources, and initializing our variables.

--- a/res/values/ct_attrs.xml
+++ b/res/values/ct_attrs.xml
@@ -8,6 +8,7 @@
         <attr name="rimInnerShadow" format="boolean" />
         <attr name="showMinutes" format="boolean" />
         <attr name="showHours" format="boolean" />
+        <attr name="timeInSeconds" format="integer" />
     </declare-styleable>
 
 </resources>
