--- a/res/values/ct_attrs.xml
+++ b/res/values/ct_attrs.xml
@@ -7,7 +7,8 @@
         <attr name="rimThickness" format="dimension" />
         <attr name="rimInnerShadow" format="boolean" />
         <attr name="showMinutes" format="boolean" />
-        <attr name="timeInSeconds" format="integer" />
+        <attr name="timeInSeconds" format="float" />
+        <attr name="intervalInSeconds" format="float" />
         <attr name="timeMinuteColor" format="color" />
         <attr name="timeSecondColor" format="color" />
         <attr name="timeUnitsTextColor" format="color" />
