--- a/res/layout/fragment_main.xml
+++ b/res/layout/fragment_main.xml
@@ -15,6 +15,7 @@
         android:layout_height="200dp"
         android:layout_centerInParent="true"
         app:intervalInSeconds="1"
+        app:onTimerEndedText="Cancel"
         app:rimDefaultColor="#EEF7F7F7"
         app:rimFillColor="#EEBFFF00"
         app:rimInnerShadow="true"
