Bifurcation. Libray and demo.

--- a/demo/res/layout/activity_main.xml
+++ b/demo/res/layout/activity_main.xml
@@ -1,4 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/lib/com.rohitbhoompally.elements.circularcdt"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,9 +9,71 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.rohitbhoompally.elements.cdtdemo.MainActivity" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.rohitbhoompally.elements.circularcdt.CircularTimer
+        android:id="@+id/c_timer"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_centerInParent="true"
+        app:intervalInSeconds="1"
+        app:onTimerEndedText="Cancel"
+        app:rimDefaultColor="#EEF7F7F7"
+        app:rimFillColor="#EEBFFF00"
+        app:rimInnerShadow="true"
+        app:rimThickness="10dp"
+        app:showMinutes="true"
+        app:timeInSeconds="5"
+        app:timeMinuteColor="#EEBAFF0A"
+        app:timeSecondColor="#EEBAFF0A"
+        app:timeUnitsTextColor="#AEAEAEAE" />
+
+    <LinearLayout
+        android:id="@+id/btn_wrapper"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentBottom="true"
+        android:orientation="horizontal"
+        android:visibility="gone"
+        android:weightSum="0.9" >
+
+        <FrameLayout
+            android:id="@+id/btn_pause_resume_wrapper"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.3" >
+
+            <Button
+                android:id="@+id/pause"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/pause" />
+
+            <Button
+                android:id="@+id/resume"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/resume"
+                android:visibility="gone" />
+        </FrameLayout>
+
+        <Button
+            android:id="@+id/stop"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.3"
+            android:text="@string/stop" />
+
+        <Button
+            android:id="@+id/reset"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="0.3"
+            android:text="@string/reset" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/start"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/start" />
 
 </RelativeLayout>
